# cppDevYnov

./: .gitignore  README.md
Flyweight/Flyweight/: Flyweight.sln
Flyweight/Flyweight/Flyweight/: Flyweight.vcxproj  Tree.h  TreeModel.h  main.cpp
M2_Cours1/: M2_Cours1.sln
M2_Cours1/Debug/: M2_Cours1.ilk
M2_Cours1/M2_Cours1/: AbstractHero.cpp  AbstractHero.h  AwsomeHero.cpp  AwsomeHero.h  BasicBehavior.cpp  BasicBehavior.h  BasicCustomHero.cpp  BasicCustomHero.h  CurrentBehavior.cpp  CurrentBehavior.h  FullCustomHero.cpp  FullCustomHero.h  Hero.cpp  Hero.h  IBehavior.h  M2_Cours1.vcxproj  M2_Cours1.vcxproj.filters  TCustomHero.cpp  TCustomHero.h  THero.cpp  THero.h  TList.cpp  TList.h  TVector.cpp  TVector.h  cours2_recapTemplate.cpp  main.cpp
M2_Cours1/M2_Cours1/Debug/: M2_Cours1.exe.recipe  abstracthero.obj.enc  hero.obj.enc  main.obj.enc  vc142.idb
M2_Cours1/M2_Cours1/Debug/M2_Cours1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  M2_Cours1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
M2_Cours1/M2_Cours1/x64/Debug/: M2_Cours1.exe.recipe  vc142.idb
M2_Cours1/M2_Cours1/x64/Debug/M2_Cours1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  M2_Cours1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
M2_Cours1/x64/Debug/: M2_Cours1.ilk
MVP/MVPQt/: CMakeLists.txt
MVP/MVPQt/include/: ConcreteModel.h  ConcretePresenter.h  ConcreteView.h  Dispatcher.h  IModel.h  IPresenter.h  IView.h  Signal.h  Threading.h  Trigger.h
MVP/MVPQt/src/: BackgroundWorker.cpp  ConcreteModel.cpp  ConcretePresenter.cpp  ConcreteView.cpp  IPresenter.cpp  main.cpp
MVP/ModelVuePresenter/: ModelVuePresenter.sln
MVP/ModelVuePresenter/ModelVuePresenter/: BackgroundWorker.h  IModel.h  IPresenter.cpp  IPresenter.h  IView.cpp  IView.h  ModelVuePresenter.vcxproj  main.cpp
ProgBasNiveau/: Tutorial04.7z  Tutorial04_camera.7z
ProgBasNiveau/Tutorial04/: Box.cpp  Box.h  Buffers.h  Camera.cpp  Camera.h  Object.h  Scene3D.cpp  Scene3D.h  Tutorial04.cpp  Tutorial04.cpp.bak  Tutorial04.fx  Tutorial04.fx.bak  Tutorial04_2017.sln  Tutorial04_2017.vcxproj  Tutorial04_2017.vcxproj.filters  imgui.ini
ProgBasNiveau/Tutorial04/x64/Debug/: Tutorial04.ilk  Tutorial04_PS.cso  Tutorial04_VS.cso
ProgBasNiveau/Tutorial04/x64/Debug/Tutorial04.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Tutorial04.lastbuildstate  fxc.command.1.tlog  fxc.read.1.tlog  fxc.write.1.tlog  link.1284.delete.1.tlog  link.17768.delete.1.tlog  link.18312.delete.1.tlog  link.20440.delete.1.tlog  link.21124.delete.1.tlog  link.22912.delete.1.tlog  link.23700.delete.1.tlog  link.30468.delete.1.tlog  link.3384.delete.1.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
RayTracer/: RayTracerExoBaseToDO.7z
RayTracer/RayTracer/: RayTracer.sln
RayTracer/RayTracer/Debug/: RayTracer.ilk
RayTracer/RayTracer/RayTracer/: Color.h  IObject.h  ISource.h  RayTracer.vcxproj  RayTracer.vcxproj.filters  TCamera.h  TLight.h  TList.h  TPlan.h  TPoint.h  TPolygon.h  TRay.h  TSphere.h  TVector.h  TVector3D.cpp  TVector3D.h  main.cpp
RayTracer/RayTracer/RayTracer/Debug/: RayTracer.exe.recipe  vc142.idb
RayTracer/RayTracer/RayTracer/Debug/RayTracer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RayTracer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
RayTracer/RayTracer/RayTracer/x64/Debug/: RayTracer.exe.recipe  vc142.idb
RayTracer/RayTracer/RayTracer/x64/Debug/RayTracer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  (+3 more)
RayTracer/RayTracer/x64/Debug/: RayTracer.ilk
RayTracer/Raytracer_ExerciceColtier/: CMakeLists.txt  main.cpp
RayTracer/Raytracer_ExerciceColtier/Tests/: CMakeLists.txt
RayTracer/Raytracer_ExerciceColtier/Tests/Color/: TestColor.cpp
RayTracer/Raytracer_ExerciceColtier/Tests/Vector/: TestVec3D.cpp
RayTracer/Raytracer_ExerciceColtier/Tests/include/: TestCode.h
RayTracer/Raytracer_ExerciceColtier/include/: Bitmap.h  Color.h  IObject.h  ISource.h  ImageTypes.h  TCamera.h  TLight.h  TPlane.h  TPoint3D.h  TRay.h  TSphere.h  TVec3D.h  Tools.h
RayTracer/Raytracer_ExerciceColtier/src/: Bitmap.cpp  Color.cpp
SmartPointers/: SmartPointers.sln
SmartPointers/SmartPointers/: ReferenceCounter.h  SharedPtr.h  main.cpp
StateMachine/StateMachineM2/: CMakeLists.txt
StateMachine/StateMachineM2/include/: Attack.h  Hero.h  HeroMachine.h  Hide.h  IState.h  Idle.h  Machine.h  MachineCommands.h  Odometric.h  Patrol.h  Reload.h  Shoot.h  Signal.h
StateMachine/StateMachineM2/src/: Attack.cpp  Hide.cpp  Idle.cpp  Patrol.cpp  Reload.cpp  Shoot.cpp  main.cpp
TemplateTest/: TemplateTest.sln
TemplateTest/TemplateTest/: TypeTest.h  main.cpp
